@@ -1,7 +1,7 @@
 ## Process this file with automake to produce Makefile.in
 
 
-SUBDIRS =  src schemas  stubs migration po tools
+SUBDIRS =  conf src schemas  stubs migration po tools
 
 MAINTAINERCLEANFILES = aclocal.m4 configure Makefile.in config.status \
   config.log config/mkinstalldirs depcomp config/install-sh config/missing \
