@@ -4,6 +4,7 @@
 	+ Bugfix. Retrieve rip password in server configuration
 	+ Bugfix. Allow user to remove rip password when disabling ebox-to-ebox
 	  tunnel
+	+ Add backwards compatibility with old openVPN tunnels
 0.11.100
 	+ Bugfix. rip password is not required for normal clients
 	+ Add feature to allow masquerading in VPNs. Now you can use the
